@@ -7,8 +7,12 @@ apport (0.49) UNRELEASED; urgency=low
     test case. Closes: LP#83566
   * gtk/apport-gtk: Do not save/alter crash dialog title any more, it's empty
     now.
+  * apport/ui.py, open_url(): Check the user's session for
+    ksmserver/gnome-session to decide whether to prefer kfmclient or
+    gnome-open. Also, only call Firefox directly if gconf's prefered browser
+    is actually Firefox. Closes: LP#82007
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue,  6 Feb 2007 17:30:16 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue,  6 Feb 2007 18:33:15 +0100
 
 apport (0.48) feisty; urgency=low
 
